--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -3,7 +3,7 @@ description: A framework for writing Flutter applications
 homepage: https://flutter.dev
 
 environment:
-  sdk: '>=3.3.0-0 <4.0.0'
+  sdk: ">=3.3.0-0 <4.0.0"
 
 dependencies:
   # To update these, use "flutter update-packages --force-upgrade".
@@ -11,7 +11,7 @@ dependencies:
   # For detailed instructions, refer to:
   # https://github.com/flutter/flutter/wiki/Updating-dependencies-in-Flutter
   characters: 1.3.0
-  collection: 1.18.0
+  collection: 1.19.1
   material_color_utilities: 0.8.0
   meta: 1.12.0
   vector_math: 2.1.4
