--- a/packages/flutter/test_private/test/pubspec.yaml
+++ b/packages/flutter/test_private/test/pubspec.yaml
@@ -1,7 +1,7 @@
 name: animated_icons_private_test
 
 environment:
-  sdk: '>=3.2.0-0 <4.0.0'
+  sdk: ">=3.2.0-0 <4.0.0"
 
 dependencies:
   # To update these, use "flutter update-packages --force-upgrade".
@@ -15,7 +15,7 @@ dependencies:
   sky_engine:
     sdk: flutter
   characters: 1.3.0
-  collection: 1.18.0
+  collection: 1.19.1
   meta: 1.12.0
   vector_math: 2.1.4
 
